# text-editor

./: CMakeLists.txt  README.md  build.sh  demo1.c  kilo  kilo.c
include/: defs.h  editor.h  fileio.h  find.h  highlight.h  row.h  terminal.h  vim.h
src/: buffer.c  editor.c  fileio.c  find.c  highlight.c  main.c  row.c  terminal.c  vim.c
